--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		
 		<div class="overflow-hidden" style="max-height: 30vh;">
 		<div class="container px-5">
-        <img src="images/piano_hero.JPG" class="img-fluid border rounded-3 shadow-lg mb-5" alt="Piano" width="800" height="600" loading="lazy">
+        <img src="images/piano_hero.jpg" class="img-fluid border rounded-3 shadow-lg mb-5" alt="Piano" width="800" height="600" loading="lazy">
 		</div>
 		</div>
 			
